[gd_scene load_steps=13 format=3 uid="uid://dbd8f8ail12dy"]

[ext_resource type="Script" path="res://script/player/g_player.gd" id="1_0mupo"]
[ext_resource type="Texture2D" uid="uid://npbaotfvgrg" path="res://view_border.png" id="2_rc5qc"]
[ext_resource type="Script" path="res://script/player/community_egg_manager.gd" id="3_f2qax"]
[ext_resource type="Texture2D" uid="uid://rrmxmdg8ceqv" path="res://world/objects/communityEgg.png" id="4_dtvaa"]
[ext_resource type="PackedScene" uid="uid://x3c2ryryppc" path="res://script/player/chat.tscn" id="5_b34l4"]
[ext_resource type="Script" path="res://script/player/chatty_egg_man.gd" id="5_oin45"]
[ext_resource type="Texture2D" uid="uid://bbijeovp6ck77" path="res://world/objects/chattyEgg.png" id="6_8x2mw"]
[ext_resource type="Theme" uid="uid://cp2lvhk230w7h" path="res://engine/EggUI_Theme.tres" id="7_it024"]
[ext_resource type="Texture2D" uid="uid://ctmcru4i2506i" path="res://world/objects/artistEgg.png" id="8_eoubn"]
[ext_resource type="Script" path="res://script/player/egg_get.gd" id="8_vx5sw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pbfyn"]
height = 1.7

[sub_resource type="GDScript" id="GDScript_j6san"]
script/source = "extends SubViewport

func _ready() -> void:
	await get_parent().ready
	#world_3d = get_tree().root.world_3d
"

[node name="GPlayer" type="CharacterBody3D"]
floor_snap_length = 0.2
script = ExtResource("1_0mupo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_pbfyn")

[node name="CamPos" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="InteractCast" type="RayCast3D" parent="CamPos"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -2)
collision_mask = 4
collide_with_areas = true

[node name="Camera_crouchpos" type="Marker3D" parent="."]

[node name="Camera_standpos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="StairsAhead" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.298033, 0.770327)
target_position = Vector3(0, -0.45, 0)

[node name="StairsBelow" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.00221, 0)
target_position = Vector3(0, -0.75, 0)

[node name="PlayerUI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = -1
follow_viewport_enabled = true

[node name="MainViewport" type="SubViewportContainer" parent="PlayerUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 4

[node name="SubViewport" type="SubViewport" parent="PlayerUI/MainViewport"]
handle_input_locally = false
size = Vector2i(320, 224)
render_target_update_mode = 4
script = SubResource("GDScript_j6san")

[node name="MainCam" type="Camera3D" parent="PlayerUI/MainViewport/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
cull_mask = 1048573
current = true
fov = 90.0
far = 10.0

[node name="TextViewport" type="SubViewportContainer" parent="PlayerUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PlayerUI/TextViewport"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 896)
render_target_update_mode = 4

[node name="TextCam" type="Camera3D" parent="PlayerUI/TextViewport/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
cull_mask = 2
fov = 90.0
far = 15.0

[node name="TextureRect" type="TextureRect" parent="PlayerUI"]
visible = false
offset_left = -199.0
offset_top = -132.0
offset_right = 838.0
offset_bottom = 579.0
texture = ExtResource("2_rc5qc")
expand_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PlayerUI"]
offset_right = 40.0
offset_bottom = 40.0
stretch_mode = 3

[node name="CommunityEggMan" type="Control" parent="PlayerUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_f2qax")
egg_name = "Community Egg"
egg_Desc = "Sent a chat message!"
egg_image = ExtResource("4_dtvaa")

[node name="ChattyEggMan" type="Control" parent="PlayerUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_oin45")
egg_name = "Chatty Egg"
egg_Desc = "Talked with all the denizens!"
egg_image = ExtResource("6_8x2mw")

[node name="Chat" parent="PlayerUI" instance=ExtResource("5_b34l4")]
unique_name_in_owner = true
visible = false

[node name="EggGet" type="Control" parent="PlayerUI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_it024")
script = ExtResource("8_vx5sw")

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/EggGet"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PlayerUI/EggGet/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/EggGet/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI/EggGet/MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="EggName" type="Label" parent="PlayerUI/EggGet/MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "YOU GOT [EGG]!"
horizontal_alignment = 1

[node name="EggDesc" type="Label" parent="PlayerUI/EggGet/MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "DESCRIPTION"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/EggGet/MarginContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 480)
layout_mode = 2

[node name="EggTex" type="TextureRect" parent="PlayerUI/EggGet/MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 50)
layout_mode = 2
texture = ExtResource("8_eoubn")
expand_mode = 1
stretch_mode = 5

[node name="Okay" type="Button" parent="PlayerUI/EggGet/MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Nice :)"

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.689964, 0.626744, 0.559216, 1)

[connection signal="all_eggs" from="PlayerUI/EggGet" to="." method="all_eggs"]
[connection signal="egg_accepted" from="PlayerUI/EggGet" to="." method="confirm_egg"]
[connection signal="pressed" from="PlayerUI/EggGet/MarginContainer/Panel/MarginContainer/VBoxContainer/Okay" to="PlayerUI/EggGet" method="_on_okay_pressed"]
